# virtual-fpga

./: CMakeLists.txt  plan.md
src/: main.cpp
src/analysis/: TimingAnalyzer.cpp  TimingAnalyzer.hpp
src/cad/: LogicBlock.hpp  Netlist.hpp  Packer.cpp  Packer.hpp  Parser.cpp  Parser.hpp  Placer.cpp  Placer.hpp  Router.cpp  Router.hpp
src/core/: LogicVal.cpp  LogicVal.hpp  Signal.cpp  Signal.hpp
src/fabric/: BitstreamLoader.cpp  BitstreamLoader.hpp  Fabric.cpp  Fabric.hpp  Tile.hpp
src/primitives/: BRAM.hpp  DFF.hpp  DSP.hpp  LUT.hpp
src/ui/: Renderer.cpp  Renderer.hpp
tests/: flow_test.cpp  hard_block_test.cpp  main_test.cpp  packer_test.cpp  parser_test.cpp  placer_test.cpp  renderer_test.cpp  router_test.cpp  timing_test.cpp
tests/data/: test_design.json
